# dsa_bot

./: .gitignore  Cargo.toml  README.md
JSONEditor/: DSAJSONEditor.sln
JSONEditor/DSAJSONEditor/: App.xaml  App.xaml.cs  DSAJSONEditor.csproj  FodyWeavers.xml  MainWindow.xaml  MainWindow.xaml.cs
JSONEditor/DSAJSONEditor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
lang/: de_DE.json  en_GB.json
src/: main.rs
src/commands/: character.rs  meta.rs  mod.rs  roll.rs  util.rs
src/dsa/: attribute.rs  char_repository.rs  character.rs  checks.rs  initiative.rs  mod.rs  npc_repository.rs  result.rs  spells.rs  talent.rs  util.rs
src/lib/: dice.rs  mod.rs  modifier.rs  operator.rs  roll.rs
src/util/: input.rs  localisation.rs  mod.rs  uint8.rs
