[package]
name = "dsa_bot"
version = "2.0.0-rc.1"
authors = ["Lukas Grünwald <gruenwald.lk@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.2"
env_logger = "0.7.1"
kankyo = "0.3.0"
log = "0.4"
rand = "0.7.3"
regex = "1.3.6"
lazy_static = "1.4.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
json-gettext = "3.1.7"
sentry = { version = "0.18.0", features = ["with_env_logger"] }
